--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="forty_four_dp">44dp</dimen>
     <dimen name="ten_dp">10dp</dimen>
     <dimen name="two_dp">2dp</dimen>
+    <dimen name="fifty_dp">50dp</dimen>
 </resources>
