--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="ten_dp">10dp</dimen>
     <dimen name="two_dp">2dp</dimen>
     <dimen name="fifty_dp">50dp</dimen>
+    <dimen name="thirty_two_dp">32dp</dimen>
 </resources>
